--- a/2021-net-turma1/Djakson/TreinamentoBitzen/Views/Shared/_Layout.cshtml
+++ b/2021-net-turma1/Djakson/TreinamentoBitzen/Views/Shared/_Layout.cshtml
@@ -22,7 +22,8 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
                     <li>@Html.ActionLink("Fabricantes", "Index", "Manufacturer")</li>
-                    <li>@Html.ActionLink("Veiculos", "Index", "Vehicle")</li>
+                    <li>@Html.ActionLink("Veículos", "Index", "Vehicle")</li>
+                    <li>@Html.ActionLink("Motoristas", "Index", "Driver")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
