Adds FuelType GET

--- a/2021-net-turma1/Djakson/TreinamentoBitzen/Views/Shared/_Layout.cshtml
+++ b/2021-net-turma1/Djakson/TreinamentoBitzen/Views/Shared/_Layout.cshtml
@@ -24,6 +24,7 @@
                     <li>@Html.ActionLink("Fabricantes", "Index", "Manufacturer")</li>
                     <li>@Html.ActionLink("Veículos", "Index", "Vehicle")</li>
                     <li>@Html.ActionLink("Motoristas", "Index", "Driver")</li>
+                    <li>@Html.ActionLink("Combustível", "Index", "FuelType")</li>
                     <li>@Html.ActionLink("Contact", "Contact", "Home")</li>
                 </ul>
             </div>
